--- a/web-chat-frontend/src/App.css
+++ b/web-chat-frontend/src/App.css
@@ -1,3 +1,30 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+}
+
 .App {
   text-align: center;
+}
+
+.card-shadow {
+  --webkit-box-shadow: 0px 5px 5px 0px rgba(64, 64, 64, 0.5);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(64, 64, 64, 0.5);
+  box-shadow: 0px 5px 5px 0px rgb(64, 64, 64, 0.5);
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
 }
