--- a/web-chat-frontend/src/App.scss
+++ b/web-chat-frontend/src/App.scss
@@ -17,7 +17,7 @@ body {
 .card-shadow {
   --webkit-box-shadow: 0px 5px 5px 0px rgba(64, 64, 64, 0.5);
   -moz-box-shadow: 0px 5px 5px 0px rgba(64, 64, 64, 0.5);
-  box-shadow: 0px 5px 5px 0px rgb(64, 64, 64, 0.5);
+  box-shadow: 0px 5px 5px 0px rgba(64, 64, 64, 0.5);
 }
 
 .m-0 {
