add size into style for selection

--- a/web-chat-frontend/src/components/Auth/Auth.scss
+++ b/web-chat-frontend/src/components/Auth/Auth.scss
@@ -37,7 +37,7 @@
                     padding: 20px;
 
                     .input-field {
-                        input {
+                        input, select {
                             height: 40px;
                             width: 100%;
                             box-sizing: border-box;
