--- a/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
+++ b/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
@@ -25,5 +25,10 @@
             align-self: center;
             color: white;
         }
+
+        img {
+            width: 40px;
+            height: 40px;
+        }
     }
 }
