install fontawesome, add styles of navbar user menu

--- a/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
+++ b/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
@@ -12,6 +12,11 @@
         color: white;
     }
 
+    .fa-icon {
+        color: white;
+        margin-left: 5px;
+    }
+
     #profile-menu {
         display: flex;
         justify-content: flex-end;
