--- a/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
+++ b/web-chat-frontend/src/components/Chat/components/Navbar/Navbar.scss
@@ -32,8 +32,29 @@
         }
 
         img {
+            display: flex;
+            color: white;
+            align-self: center;
+            margin-right: 5px;
+            border-radius: 20px;
             width: 40px;
             height: 40px;
+        }
+
+        #profile-options {
+            position: absolute;
+            top: 50px;
+            border-radius: 5px;
+            padding: 0 5px;
+            right: 5px;
+            border: 1px solid #d9d9d9;
+            background-color: white;
+            z-index: 9999;
+
+            p {
+                margin: 10px 5px;
+                color: black;
+            }
         }
     }
 }
