correct erro into the styles

--- a/web-chat-frontend/src/components/Chat/components/FriendList/FriendList.scss
+++ b/web-chat-frontend/src/components/Chat/components/FriendList/FriendList.scss
@@ -23,7 +23,7 @@
 
         button {
             border: none;
-            background-color: $bg_main;
+            background-color: $bg-main;
             color: white;
             width: 60px;
             padding: 5px;
