--- a/web-chat-frontend/src/components/Chat/components/MessageInput/MessageInput.scss
+++ b/web-chat-frontend/src/components/Chat/components/MessageInput/MessageInput.scss
@@ -1,62 +1,75 @@
-@import '../../../../assets/scss/variables';
+@import "../../../../assets/scss/variables";
 
-#messenger {
-    justify-content: space-between;
-    padding: 15px;
-    flex-grow: 2;
-    background-color: white;
+#input-container {
+    position: relative;
 
-    #messenger-wrap {
+    #image-upload-container {
         display: flex;
-        flex-direction: column;
-        height: 100%;
+        justify-content: space-between;
+        padding: 2.5px 2.5px 2.5px 0;
         position: relative;
 
-        #settings {
-            border-radius: 5px;
-            position: absolute;
-            right: 12px;
-            top: 8px;
-            padding: 5px;
-            border: 1px solid #d9d9d9;
-            background-color: #fff;
+        #image-upload {
             display: flex;
-            flex-direction: column;
+        }
 
-            &>div {
-                position: relative;
-                display: flex;
-                align-items: center;
-                padding: 5px;
-                cursor: pointer;
+        #message-notification {
+            display: flex;
+            cursor: pointer;
+            border: 1px solid $bg-main;
+            border-radius: 15px;
+            padding: 5px;
 
-                .fa-icon {
-                    position: relative;
-                    font-size: 20px;
-                    color: $bg-main;
-                    margin-right: 5px;
-                    min-width: 20px;
-                }
-            }
-
-            p {
-                margin: 5px 0;
-                color: #000;
+            .fa-icon {
+                color: $bg-main;
+                margin-right: 5px
             }
         }
 
-        &>.fa-icon {
-            font-size: 20px;
-            color: $bg-main;
+        .fa-icon {
+            position: relative;
             right: 0;
-            position: absolute;
             top: 0;
-            cursor: pointer;
+        }
+
+        #image-details {
+            padding: 2px;
+            border: 1px solid black;
+            margin-right: 5px;
+            display: flex;
+            align-items: center;
+
+            .fa-icon {
+                margin: 0 4px;
+            }
+        }
+
+    }
+
+    #message-input {
+        position: relative;
+
+        input {
+            width: 100%;
+            box-sizing: border-box;
         }
     }
 
-    &>div {
-        flex-grow: 1;
+    .fa-icon {
+        font-size: 20px;
+        color: $bg-main;
+        position: absolute;
+        right: 5px;
+        top: 8px;
+        cursor: pointer
+    }
+
+    .mb-5p {
+        margin-bottom: 5px;
+    }
+
+    .mb-10p {
+        margin-bottom: 10px;
     }
 
     input {
@@ -65,40 +78,13 @@
         padding: 10px;
     }
 
-    hr {
-        border-top: 1px solid #cfcfcf;
-        width: 100%;
-        margin-bottom: 10px;
-    }
-
-    #delete-chat {
-        background-color: $success;
-        border: none;
-        padding: 5px;
-        width: 70px;
-        color: white;
-        border-radius: 10px;
-        cursor: pointer;
-    }
-
-    #suggestions {
-
-        .suggestion {
-            margin: 10px 0;
-            padding: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            button {
-                background-color: $success;
-                border-radius: 10px;
-                border: none;
-                height: 25px;
-                color: white;
-                cursor: pointer;
-            }
-        }
-
+    #chat-image {
+        position: absolute;
+        visibility: hidden;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        opacity: 0.0;
     }
 }
